clusters/apps/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Etc/UTC
          image: lscr.io/linuxserver/jellyfin:10.9.6
          name: jellyfin
          ports:
            - containerPort: 8096
              hostPort: 8096
              protocol: TCP
            - containerPort: 8920
              hostPort: 8920
              protocol: TCP
            - containerPort: 7359
              hostPort: 7359
              protocol: UDP
            - containerPort: 1900
              hostPort: 1900
              protocol: UDP
          volumeMounts:
            - mountPath: /config
              name: jellyfin-config
            - mountPath: /data/media
              name: jellyfin-media
      restartPolicy: Always
      volumes:
        - name: jellyfin-media
          persistentVolumeClaim:
            claimName: jellyfin-pvc
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-pvc-config
