clusters/apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: apps
spec:
  selector:
    app: jellyfin
  ports:
    - name: "8096"
      port: 8096
      targetPort: 8096
    - name: "8920"
      port: 8920
      targetPort: 8920
    - name: "7359"
      port: 7359
      protocol: UDP
      targetPort: 7359
    - name: "1900"
      port: 1900
      protocol: UDP
      targetPort: 1900
