clusters/apps/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: apps
  annotations:
    spec.ingressClassName: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: jellyfin.homelab.haseebmajid.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
  tls:
    - hosts:
        - jellyfin.homelab.haseebmajid.dev
      secretName: jellyfin-haseebmajid-dev-tls
